# octodns-autodns

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: main.yml
octodns_autodns/: __init__.py
script/: cibuild  cibuild-setup-py  coverage  format  lint  release
tests/: test_provider_octodns_autodns.py
tests/config/: unit.tests.yaml
tests/fixtures/: unit.tests.zone.json
